edgex/k8s/base/edge-agent/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edgex-edge
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edgex-edge-default-deny
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edgex-edge-agent-required-flows
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: telemetry-edge-agent
      app.kubernetes.io/name: edge-telemetry-agent
      app.kubernetes.io/part-of: edgex-telemetry-edge
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: edgex-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: edgex-ingest-gateway
      ports:
        - protocol: TCP
          port: 8443
